<resources>
    <string name="app_name">SpikaChatModule</string>

    <!-- local string for dialog -->
    <string name="error">Error</string>

    <string name="camera_error_title">Camera error</string>
    <string name="camera_error_camera_init">Camera could not be initialize</string>
    <string name="camera_error_camera_image">Error while getting image from camera.</string>
    <string name="camera_error_no_camera">No camera on device.</string>

    <string name="compress_image_title">Compress image</string>
    <string name="compress_image_text">Do you want to scale image?</string>

    <string name="file_not_found">File not found!\n Please check if file exists.</string>

    <string name="gallery_error_title">Gallery error</string>
    <string name="gallery_error_text">Could not load image from gallery.</string>

    <string name="user_error_title">Error</string>
    <string name="user_error_not_sent">User is not sent via extras!</string>

    <string name="room_error_title">Error</string>
    <string name="room_error_not_sent">Room id is not sent via extras!</string>

    <string name="socket_error_title">Error</string>
    <string name="socket_error_connect_failed">Connect to socket failed!</string>

    <string name="audio_time_error">Time limit</string>
    <string name="audio_time_text">Time limit for audio file is reached.</string>

    <string name="file_downloaded">File is downloaded.</string>
    <string name="open_file">Do You want to open file?</string>

    <string name="location_error_title">Location error</string>
    <string name="location_error_select">Please select location by tap on map.</string>

    <string name="contact_error_title">Contact error</string>
    <string name="contact_error_select">Please verify selected contact.</string>

    <string name="delete_message_title">Delete message</string>
    <string name="delete_message_text">Are You sure?</string>
    <!-- end -->

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chat">Chat</string>
    <string name="e_network_error">Network Error</string>
    <string name="e_something_went_wrong">Something went wrong</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="cancel">Cancel</string>
    <string name="users">Users</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="background">Background</string>
    <string name="preview">Preview</string>
    <string name="uploading">Uploading</string>
    <string name="download">Download</string>
    <string name="show_location_on_map">Show location on map</string>
    <string name="file">File</string>
    <string name="downloading">Downloading</string>
    <string name="NO_CAPITAL">NO</string>
    <string name="YES_CAPITAL">YES</string>
    <string name="are_typing">are typing&#8230;</string>
    <string name="is_typing">is typing&#8230;</string>
    <string name="joined_to_conversation">joined to conversation.</string>
    <string name="left_from_conversation">left from conversation.</string>
    <string name="finishing">Finishing</string>
    <string name="waiting_to_response">Waiting to response</string>
    <string name="share_contacts">Share contact</string>
    <string name="message_information">Message Information</string>
    <string name="sender">Sender</string>
    <string name="sent_at">Sent At</string>
    <string name="users_seen">Users Seen</string>
    <string name="DELETE">DELETE</string>
    <string name="CLOSE">CLOSE</string>
    <string name="message_deleted_at">"Message deleted at "</string>
    <string name="seen">"Seen, "</string>
    <string name="sending___">Sending&#8230;</string>
    <string name="sent">"Sent, "</string>
    <string name="message_option">Message option</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="message_copied_to_clipboard">Message copied to clipboard</string>
    <string name="share">Share</string>
    <string name="select_and_attach_file_or_contact">Select and attach file or contact:</string>
    <string name="there_is_new_messages">There is new messages!</string>
    <string name="new_messages">New messages</string>
    <string name="share____">Share&#8230;</string>
    <string name="no_name">No name</string>
    <string name="save">Save</string>
    <string name="recording_">Recording&#8230;</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

</resources>
