<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context=".ChatActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/youCardView"
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonsAll"
        android:layout_below="@+id/tToolbar"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/default_color"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <RelativeLayout
                android:id="@+id/wrraper"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/soundController"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_trans"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/ivPlayPause"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@null"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_play"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toRightOf="@+id/ivPlayPause"
                    android:layout_toEndOf="@+id/ivPlayPause"
                    android:progress="0"/>
            </RelativeLayout>
        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/buttonsAll"
        android:layout_width="match_parent"
        android:background="@color/gray_send_message_background"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light_light_color" />

        <LinearLayout
            android:id="@+id/buttonsChooseLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="2">

            <Button
                android:id="@+id/galleryBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:text="@string/gallery"/>

            <Button
                android:id="@+id/cameraBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/camera"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/CANCEL"/>

            <Button
                android:id="@+id/okButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/OK"/>

        </LinearLayout>
    </RelativeLayout>


    <android.support.v7.widget.Toolbar
        android:id="@+id/tToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/toolbar_color"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

</RelativeLayout>
