<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="invisible">

    <com.clover_studio.spikachatmodule.view.circularview.layout.RevealFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/menuMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.clover_studio.spikachatmodule.view.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_and_attach_file_or_contact"
                    android:textColor="@android:color/white"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:background="@drawable/menu_background_top_corners_drawable"
                    android:gravity="center_horizontal"
                    android:id="@+id/select_and_attach_label"/>

                <LinearLayout
                    android:id="@+id/firstRow"
                    android:layout_width="match_parent"
                    android:baselineAligned="false"
                    android:layout_height="wrap_content"
                    android:weightSum="99"
                    android:layout_below="@id/select_and_attach_label"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="1dp"
                    android:background="@color/default_color"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/camera"
                        android:layout_width="0dp"
                        android:layout_weight="33"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:background="@drawable/menu_background_click_state"
                        android:visibility="invisible">

                        <ImageView
                            android:id="@+id/cameraBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_menu_camera"
                            android:contentDescription="@null"
                            android:background="@android:color/transparent"
                            />

                        <com.clover_studio.spikachatmodule.view.CustomTextView
                            android:id="@+id/cameraTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="@string/camera"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/menu_text_size"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/gallery"
                        android:layout_width="0dp"
                        android:layout_weight="33"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:background="@drawable/menu_background_click_state"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <ImageView
                            android:id="@+id/galleryBtn"
                            android:layout_width="wrap_content"
                            android:contentDescription="@null"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_menu_gallery"
                            android:background="@android:color/transparent"
                            />

                        <com.clover_studio.spikachatmodule.view.CustomTextView
                            android:id="@+id/galleryTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="@string/gallery"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/menu_text_size"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/location"
                        android:layout_width="0dp"
                        android:layout_weight="33"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/menu_background_click_state"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <ImageView
                            android:id="@+id/locationBtn"
                            android:contentDescription="@null"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_menu_location"
                            android:background="@android:color/transparent"
                            />

                        <com.clover_studio.spikachatmodule.view.CustomTextView
                            android:id="@+id/locationTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="@string/location"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/menu_text_size"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/secondRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/firstRow"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="1dp"
                    android:baselineAligned="false"
                    android:background="@color/default_color_light"
                    android:weightSum="99"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/file"
                        android:layout_width="0dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:layout_weight="50"
                        android:layout_height="wrap_content"
                        android:background="@drawable/menu_background_click_state"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <ImageView
                            android:id="@+id/fileBtn"
                            android:contentDescription="@null"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_menu_file"
                            android:background="@android:color/transparent"
                            />

                        <com.clover_studio.spikachatmodule.view.CustomTextView
                            android:id="@+id/fileTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="@string/file"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/menu_text_size"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/contact"
                        android:layout_width="0dp"
                        android:layout_weight="50"
                        android:background="@drawable/menu_background_click_state"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <ImageView
                            android:id="@+id/contactBtn"
                            android:contentDescription="@null"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_menu_contact"
                            android:background="@android:color/transparent"
                            />

                        <com.clover_studio.spikachatmodule.view.CustomTextView
                            android:id="@+id/contactTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="@string/contact"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/menu_text_size"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/thirdRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/secondRow"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="1dp"
                    android:baselineAligned="false"
                    android:background="@color/default_color_light"
                    android:weightSum="99"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/audio"
                        android:layout_width="0dp"
                        android:layout_weight="50"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:background="@drawable/menu_background_click_state"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <ImageView
                            android:id="@+id/audioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_menu_audio"
                            android:contentDescription="@null"
                            android:background="@android:color/transparent"
                            />

                        <com.clover_studio.spikachatmodule.view.CustomTextView
                            android:id="@+id/audioTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="@string/audio"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/menu_text_size"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/video"
                        android:layout_width="0dp"
                        android:background="@drawable/menu_background_click_state"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:layout_weight="50"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <ImageView
                            android:id="@+id/videoBtn"
                            android:layout_width="wrap_content"
                            android:contentDescription="@null"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_menu_video"
                            android:background="@android:color/transparent"
                            />

                        <com.clover_studio.spikachatmodule.view.CustomTextView
                            android:id="@+id/videoTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="@string/video"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/menu_text_size"/>

                    </LinearLayout>

                </LinearLayout>

                <com.clover_studio.spikachatmodule.view.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginTop="1dp"
                    android:textColor="@android:color/white"
                    android:padding="10dp"
                    android:layout_below="@id/thirdRow"
                    android:textSize="14sp"
                    android:background="@drawable/menu_background_bottom_corners_drawable"
                    android:gravity="center_horizontal"
                    android:id="@+id/cancel_label"/>

            </RelativeLayout>

        </RelativeLayout>

    </com.clover_studio.spikachatmodule.view.circularview.layout.RevealFrameLayout>

</RelativeLayout>